@@ -1,6 +1,6 @@
 
 // plus4emu -- portable Commodore Plus/4 emulator
-// Copyright (C) 2003-2008 Istvan Varga <istvanv@users.sourceforge.net>
+// Copyright (C) 2003-2016 Istvan Varga <istvanv@users.sourceforge.net>
 // http://sourceforge.net/projects/plus4emu/
 //
 // This program is free software; you can redistribute it and/or modify
@@ -206,7 +206,11 @@ int main(int argc, char **argv)
             }
           }
           cmdLine.resize(i);
+#if defined(_WIN32) || defined(_WIN64) || defined(_MSC_VER)
           cmdLine += "makecfg\"";
+#else
+          cmdLine += "p4makecfg\"";
+#endif
 #ifdef __APPLE__
           cmdLine += " -f";
 #endif
