@@ -1,6 +1,11 @@
 Changes in version 1.2.9.3
 --------------------------
 
+  * window icons have been implemented on non-Windows platforms if the
+    emulator is built with FLTK 1.3.3 or newer
+  * added support for building with FLTK 1.3.x
+  * minor bug fixes
+
 Changes in version 1.2.9.2
 --------------------------
 
